module(
    name = "rules_elixir_mix_source_integration",
    version = "0.0.0",
    bazel_compatibility = [">=9.2.0"],
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_elixir_mix", version = "0.1.0")
local_path_override(
    module_name = "rules_elixir_mix",
    path = "..",
)

new_local_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:local.bzl",
    "new_local_repository",
)

new_local_repository(
    name = "source_tools",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["bash", "make", "perl"])
filegroup(
    name = "posix_tools",
    srcs = [
        "awk", "basename", "cat", "chmod", "cmp", "cp", "cut", "date",
        "dd", "dirname", "expr", "find", "getconf", "grep", "head",
        "install", "ln", "mkdir", "mv", "printf", "pwd", "readlink",
        "realpath", "rm", "sed", "sort", "tail", "touch", "tr", "uname",
        "wc", "xargs",
    ],
)
""",
    path = "/usr/bin",
)

elixir_config = use_extension(
    "@rules_elixir_mix//bzlmod:toolchains.bzl",
    "elixir_config",
)
elixir_config.source_toolchain(
    name = "catalog_source_x86_64",
    bash = "@source_tools//:bash",
    bootstrap_erlexec = "erts-17.0.3/bin/erlexec",
    bootstrap_otp_sha256 = "a636ad0585b0fe85a5dfa165ba23a9c81a67cadfdd6e2a732a1cc50c51766bcf",
    bootstrap_otp_type = "tar.gz",
    bootstrap_otp_url = "file:///tmp/rules-elixir-mix-ci-otp-bootstrap-x86_64.tar.gz",
    bootstrap_otp_version = "29.0.3",
    bootstrap_version_marker = "releases/29/OTP_VERSION",
    configure_options = [
        "--disable-pgo",
        "--disable-sctp",
        "--without-javac",
        "--without-odbc",
        "--without-termcap",
        "--without-wx",
    ],
    default = True,
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    jobs = 8,
    make = "@source_tools//:make",
    make_options = ["SKIP_APPLICATIONS=wx debugger observer et reltool"],
    perl = "@source_tools//:perl",
    posix_tools = ["@source_tools//:posix_tools"],
    runtime_abi = "//:source_runtime_abi_x86_64",
)
elixir_config.source_toolchain(
    name = "catalog_source_arm64",
    bash = "@source_tools//:bash",
    bootstrap_erlexec = "erts-17.0.3/bin/erlexec",
    bootstrap_otp_sha256 = "0eb1e99573b630cbbc9c7ee1e6126b083556374f9582e6874f70bfa650231fd6",
    bootstrap_otp_type = "tar.gz",
    bootstrap_otp_url = "file:///tmp/rules-elixir-mix-ci-otp-bootstrap-arm64.tar.gz",
    bootstrap_otp_version = "29.0.3",
    bootstrap_version_marker = "releases/29/OTP_VERSION",
    configure_options = [
        "--disable-pgo",
        "--disable-sctp",
        "--without-javac",
        "--without-odbc",
        "--without-termcap",
        "--without-wx",
    ],
    exec_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    jobs = 8,
    make = "@source_tools//:make",
    make_options = ["SKIP_APPLICATIONS=wx debugger observer et reltool"],
    perl = "@source_tools//:perl",
    posix_tools = ["@source_tools//:posix_tools"],
    runtime_abi = "//:source_runtime_abi_arm64",
)
use_repo(elixir_config, "elixir_config")

register_toolchains(
    "@elixir_config//catalog_source_arm64:otp_toolchain",
    "@elixir_config//catalog_source_arm64:toolchain",
    "@elixir_config//catalog_source_x86_64:otp_toolchain",
    "@elixir_config//catalog_source_x86_64:toolchain",
)
