module(
    name = "rules_elixir_mix_source_integration",
    version = "0.0.0",
    bazel_compatibility = [">=9.2.0"],
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_elixir_mix", version = "0.2.0")
bazel_dep(name = "rules_fips", version = "0.2.0")

# Direct, checksum-verified pin until rules_fips is published to BCR.
archive_override(
    module_name = "rules_fips",
    integrity = "sha256-UEjn1tlAGuz5PUc9gldz3k9GV8LvFSupJzAQBjFBaGk=",
    strip_prefix = "rules_fips-a79505fb124eae3359988de1082d5ca6d0dcb737",
    urls = ["https://github.com/abilisoft/rules_fips/archive/a79505fb124eae3359988de1082d5ca6d0dcb737.tar.gz"],
)

local_path_override(
    module_name = "rules_elixir_mix",
    path = "..",
)

elixir_config = use_extension(
    "@rules_elixir_mix//bzlmod:toolchains.bzl",
    "elixir_config",
)
elixir_config.source_toolchain(
    name = "catalog_source_x86_64",
    bash = "@rules_fips//fips/toolchains:source_shell",
    bootstrap_erlexec = "erts-17.0.3/bin/erlexec",
    bootstrap_launcher = "@rules_fips//fips/toolchains:hermetic_exec",
    bootstrap_otp_sha256 = "a636ad0585b0fe85a5dfa165ba23a9c81a67cadfdd6e2a732a1cc50c51766bcf",
    bootstrap_otp_type = "tar.gz",
    bootstrap_otp_url = "file:///tmp/rules-elixir-mix-ci-otp-bootstrap-x86_64.tar.gz",
    bootstrap_otp_version = "29.0.3",
    bootstrap_version_marker = "releases/29/OTP_VERSION",
    configure_options = [
        "--disable-pgo",
        "--disable-sctp",
        "--without-javac",
        "--without-odbc",
        "--without-termcap",
        "--without-wx",
    ],
    crypto_sdk = "//:openssl_fips_crypto_sdk",
    default = True,
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    fips = "required",
    jobs = 8,
    make = "@rules_fips//fips/toolchains:hermetic_make",
    make_options = ["SKIP_APPLICATIONS=wx debugger observer et reltool"],
    perl = "@rules_fips//fips/toolchains:foreign_perl",
    posix_tools = ["@rules_fips//fips/toolchains:posix_tools"],
    runtime_abi = "@rules_fips//fips/platforms:openssl_fips_musl_amd64",
    static_crypto_nif = True,
)
elixir_config.source_toolchain(
    name = "catalog_source_arm64",
    bash = "@rules_fips//fips/toolchains:source_shell",
    bootstrap_erlexec = "erts-17.0.3/bin/erlexec",
    bootstrap_exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    bootstrap_launcher = "@rules_fips//fips/toolchains:hermetic_exec",
    bootstrap_otp_sha256 = "a636ad0585b0fe85a5dfa165ba23a9c81a67cadfdd6e2a732a1cc50c51766bcf",
    bootstrap_otp_type = "tar.gz",
    bootstrap_otp_url = "file:///tmp/rules-elixir-mix-ci-otp-bootstrap-x86_64.tar.gz",
    bootstrap_otp_version = "29.0.3",
    bootstrap_version_marker = "releases/29/OTP_VERSION",
    configure_options = [
        "--build=x86_64-pc-linux-gnu",
        "--disable-pgo",
        "--disable-sctp",
        "--host=aarch64-unknown-linux-musl",
        "--without-javac",
        "--without-odbc",
        "--without-termcap",
        "--without-wx",
    ],
    cross_compile = True,
    crypto_sdk = "//:openssl_fips_crypto_sdk",
    exec_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    fips = "required",
    jobs = 8,
    make = "@rules_fips//fips/toolchains:hermetic_make",
    make_options = ["SKIP_APPLICATIONS=wx debugger observer et reltool"],
    perl = "@rules_fips//fips/toolchains:foreign_perl",
    posix_tools = ["@rules_fips//fips/toolchains:posix_tools"],
    runtime_abi = "@rules_fips//fips/platforms:openssl_fips_musl_arm64",
    static_crypto_nif = True,
)
use_repo(elixir_config, "elixir_config")

elixir_packages = use_extension(
    "@rules_elixir_mix//bzlmod:packages.bzl",
    "elixir_packages",
)
elixir_packages.mix_lock(
    name = "mix_deps",
    lockfile = "//:mix.lock",
)
use_repo(elixir_packages, "hex_pm", "mix_deps")

register_toolchains(
    "@elixir_config//catalog_source_arm64:otp_toolchain",
    "@elixir_config//catalog_source_arm64:toolchain",
    "@elixir_config//catalog_source_x86_64:otp_toolchain",
    "@elixir_config//catalog_source_x86_64:toolchain",
)
